fixed text overflow in the comment section

--- a/event-log/src/layout/content/content.module.scss
+++ b/event-log/src/layout/content/content.module.scss
@@ -13,12 +13,6 @@
         display: flex;
         align-self: center;
       }
-      .comments {
-        display: flex;
-        background-color: colors.$greycolor-light;
-        width: 100%;
-        border-radius: 5px;
-      }
       .attendees {
         display: flex;
         background-color: colors.$greycolor-light;
